# zenigh

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml  main.yml
backend/: .dockerignore  Dockerfile  app.js  auth.js  config.js  eslint.config.js  package-lock.json  package.json  sp500.json
backend/ai/: ai-agent.js
backend/auth/: index.js  middleware.js
backend/config/: stocks.json
backend/core/: client.js  core-data-client.js  market-data-client.js  parquet-operations.js
backend/db/: connection.js  data-retention.js  db-operations.js  db-schema.js  operations.js  schema.sql  seed-user.js  seed.js  user-operations.js
backend/indicators/: indicator-service.js
backend/middleware/: auth.js
backend/services/: indicators-manager.js
backend/stream/: historical-loader.js  socket-manager.js  stream-controller.js  stream-server.js  stream-service.js  websocket-client.js
backend/tests/: core-data-client.test.js  db-operations.test.js  stream-service.test.js
backend/utils/: auth-utils.js  core-data-client.js  indicator-service.js  indicator-transformer.js
frontend/: .dockerignore  Dockerfile  Dockerfile.prod  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vitest.config.js
frontend/lib/: auth-client.js
frontend/src/: App.css  App.jsx  config.js  (+3 more)
nginx/: nginx.conf
scripts/: cleanup-data.sh  ingest-daily.sh
src/: config.py  data_client.py  db.py
ta/: .dockerignore  Dockerfile  app.py  pyproject.toml  requirements.txt
(+72 files in other folders)
